<resources>
    <string name="app_name">Pigeon</string>

    <!-- Strings Login e Registro   -->
    <string name="str_textview_welcome">Bem-vindo</string>
    <string name="str_hint_email">E-mail</string>
    <string name="str_hint_password">Senha</string>
    <string name="str_btn_login">Entrar</string>
    <string name="str_textview_dont_you_have_an_account">Não tem uma conta?</string>
    <string name="str_textview_register_here">Registre-se aqui.</string>
    <string name="str_btn_yout_photo">sua foto</string>
    <string name="str_textview_create_yout_account">Crie sua conta</string>
    <string name="str_hint_name">Nome</string>
    <string name="str_btn_register">Registrar</string>
    <string name="str_textview_already_have_an_account">Já tem uma conta?</string>
    <string name="str_textview_sign_in">Entre aqui.</string>

    <!--    Strings Ultimas conversas -->
    <string name="str_textview_username">Usuario</string>
    <string name="str_textview_latest_message_received">Última mensagem recebida</string>
    <string name="str_textview_dummy_message">Está é a minha mensagem e pode ser que ela ocupe uma area muito maior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_icon_new_chat">Nova conversa</string>
    <string name="str_icon_logout">Sair</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">A senha deve ter no mínimo 6 caracteres.</string>
    <string name="str_logoname">Pigeon</string>
    <string name="str_dialog_loading_user">Carregando...</string>
    <string name="str_dialog_registering_user">Registrando usuário...</string>
    <string name="str_new_messages_username">Nome do usuário</string>
</resources>